fix up-button and scrollbar

--- a/layout/fixed-up-btn.css
+++ b/layout/fixed-up-btn.css
@@ -8,9 +8,15 @@
   height: 3rem;
   background-color: var(--green-500);
   box-shadow: 0 3px 10px 1px var(--primary);
+  &:hover {
+    i {
+      transform: translateY(-7px) scale(1.3);
+    }
+  }
 
   i {
     color: var(--secondary);
     font-size: 1.5rem;
+    transition: all 0.3s ease;
   }
 }
