--- a/layout/index.css
+++ b/layout/index.css
@@ -61,6 +61,7 @@ body {
   &::-webkit-scrollbar-thumb {
     background-color: var(--primary);
     border: 1px solid var(--secondary);
+    border-radius: 20px;
   }
 
   &::-webkit-scrollbar-track {
